# adaptivetensordf

./: CMakeLists.txt  Readme.md  build_hyper.sh  create_env.sh
hyperacorn/: README.md
hyperacorn/csrc/: CMakeLists.txt  Settings.h  build_config.h.in  globalenv.h  test.cpp
hyperacorn/csrc/data/: Dataloader.cpp  Dataloader.h  KaustScene.cpp  KaustScene.h  SceneBase.cpp  SceneBase.cu  SceneBase.h
hyperacorn/csrc/geometry/: ImplicitNet.h  Modules.h  all.h  geometry.cpp  geometry.h  geometry_tensor_qo.cpp  geometry_tensor_qo.h  tensorfield.h
hyperacorn/csrc/modules/: CameraPose.cu  IndirectGridSample1D.cu  IndirectGridSample1D.h  IndirectGridSample2D.cu  IndirectGridSample2D.h  ToneMapper.cpp  ToneMapper.h  gridencoder.cu  gridencoder.h  hashencoding.cu  hashencoding.h
hyperacorn/csrc/structure/: HelperStructs.h  HyperTree.cpp  HyperTree.cu  HyperTree.h  HyperTreeStructureOptimizer.h
hyperacorn/csrc/utils/: cimg_wrapper.h  utils.h
saiga_patch/: TrainParameters.h  saiga_patch.sh  sample_core_ini.cpp
samples/: CMakeLists.txt  hyper_train.cpp
